--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ollama": "PROVIDER=ollama node index.js "
   },
   "bin": {
-    "ai-commit": "./index.js"
+    "ai-commit": "index.js"
   },
   "repository": {
     "type": "git",
@@ -35,5 +35,6 @@
     "dotenv": "^16.0.3",
     "gpt-3-encoder": "^1.1.4",
     "inquirer": "^9.1.4"
-  }
+  },
+  "devDependencies": {}
 }
